--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Skeleton Generator",
   "private": true,
   "version": "1.1.5",
-  "description": "Tool to generate skeletons",
+  "description": "Tool to generate skeleton for different JS frameworks",
   "main": "index.jsx",
   "author": "Vittorio Scaperrotta",
   "type": "module",
@@ -38,11 +38,11 @@
     "eslint-plugin-redux-saga": "^1.3.2",
     "formik": "^2.4.6",
     "immer": "^10.1.1",
-    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-use": "^17.6.0",
     "redux-saga": "^1.3.0",
     "storybook": "^8.5.0",
     "yup": "^1.6.1"
